--- a/ERPAnimalia/Views/Product/Edit.cshtml
+++ b/ERPAnimalia/Views/Product/Edit.cshtml
@@ -11,21 +11,38 @@
     <script type="text/javascript">
         $(document).ready(function () {
 
-            $('#PrecioVenta').blur(function () {
-                debugger;
-                var precioVenta = $('#PrecioVenta').val();
-                var precioCosto= $('#PrecioCosto').val();
-                var rentPesos = (precioVenta - precioCosto);
-                var rentPorc = (1 - (precioCosto / precioVenta)) * 100;
+            $('#CodigoBarra').focus();
 
-                $('#RentabilidadPesos').val(rentPesos.toFixed(2));
-                $('#Rentabilidad').val(rentPorc.toFixed(2));
+            $('#PrecioVenta').blur(function () {
+               
+                idSubcategory = $('#IdSubCategory').val();
+
+                if (idSubcategory == 1) {
+                    var precioVenta = $('#PrecioVenta').val();
+                    var precioCosto = $('#PrecioCosto').val();
+                    var kg = $('#kg').val();
+                    var kgXP = (precioCosto / kg);
+                    var rentPesos = (precioVenta - kgXP);
+                    var rentPorc = (1 - (kgXP / precioVenta)) * 100;
+
+                    $('#RentabilidadPesos').val(rentPesos.toFixed(2));
+                    $('#Rentabilidad').val(rentPorc.toFixed(2));
+                }
+                else {
+                    var precioVenta = $('#PrecioVenta').val();
+                    var precioCosto = $('#PrecioCosto').val();
+                    var rentPesos = (precioVenta - precioCosto);
+                    var rentPorc = (1 - (precioCosto / precioVenta)) * 100;
+
+                    $('#RentabilidadPesos').val(rentPesos.toFixed(2));
+                    $('#Rentabilidad').val(rentPorc.toFixed(2));
+                }
+
 
             });
         })
             function HideSubcategory()
             {
-                debugger;
                 var idCategory = $('#IdCategory').val();
                 if(idCategory== 2)
                 {
@@ -43,7 +60,7 @@
                 }
             }
 
-
+            
     </script>
 
 </head>
@@ -53,6 +70,10 @@
     {
 
         @Html.HiddenFor(m => m.IdProducto)
+        <div class="form-group">
+            <label class="col-md-4" for="pwd">Código de barra:</label>
+            @Html.TextBoxFor(m => m.CodigoBarra, new { @class = "form-control", type = "text", placeholder = "Ingrese Codigo Barra" })
+        </div>
         <div class="form-group">
             <label class="col-md-4" for="desc">Código:</label>
                 @Html.EditorFor(m => m.Codigo, new { htmlAttributes = new { @class = "form-control", type = "text", placeholder = "Ingrese el código" } })
@@ -100,11 +121,6 @@
                             <label class="col-md-4" for="cant">Cantidad:</label>
                             @Html.EditorFor(m => m.Cantidad, new { @class = "form-control", type = "number", min = "0", step = "0.01", placeholder = "Ingrese Cantidad"  })
 
-                        </div>
-
-                        <div class="form-group">
-                            <label class="col-md-4" for="pwd">Código de barra:</label>
-                            @Html.TextBoxFor(m => m.CodigoBarra, new { @class = "form-control", type = "text", placeholder = "Ingrese Codigo Barra" })
                         </div>
 
                         <div class="form-group">
