--- a/ERPAnimalia/Views/Product/Add.cshtml
+++ b/ERPAnimalia/Views/Product/Add.cshtml
@@ -13,13 +13,14 @@
 <body>
     <script type="text/javascript">
         $(document).ready(function () {
-           
+
+            $('#CodigoBarra').focus();
+
             $('#PrecioVenta').blur(function () {
-                debugger;
+             
                 idSubcategory = $('#IdSubCategory').val();
 
-                if (idSubcategory== 1)
-                {
+                if (idSubcategory == 1) {
                     var precioVenta = $('#PrecioVenta').val();
                     var precioCosto = $('#PrecioCosto').val();
                     var kg = $('#kg').val();
@@ -30,8 +31,7 @@
                     $('#RentabilidadPesos').val(rentPesos.toFixed(2));
                     $('#Rentabilidad').val(rentPorc.toFixed(2));
                 }
-                else
-                {
+                else {
                     var precioVenta = $('#PrecioVenta').val();
                     var precioCosto = $('#PrecioCosto').val();
                     var rentPesos = (precioVenta - precioCosto);
@@ -40,138 +40,141 @@
                     $('#RentabilidadPesos').val(rentPesos.toFixed(2));
                     $('#Rentabilidad').val(rentPorc.toFixed(2));
                 }
-                
-                
+
+
             });
         })
 
-        function MyFunction()
-        {
-            debugger;
-            var _Filepath = $("#CodigoBarra").val();
-            $.ajax({ url: "/Product/ReadBarcodeFromFile", type: "POST", data: { _Filepath: _Filepath } })
-                .done(function (data) {
-                   
-                    gridProduct.clear();
-                    alert("La orden fue guardad con éxito");
-                    gridProduct.reload();
-                })
-                .fail(function () {
-                    alert("Unable to save.");
+        function MyFunction() {
+          
 
-                });
+            $('#CodigoBarra').focus();
+
+            //var _Filepath = $("#CodigoBarra").val();
+            //$.ajax({ url: "/Product/ReadBarcodeFromFile", type: "POST", data: { _Filepath: _Filepath } })
+            //    .done(function (data) {
+
+            //        gridProduct.clear();
+            //        alert("La orden fue guardad con éxito");
+            //        gridProduct.reload();
+            //    })
+            //    .fail(function () {
+            //        alert("Unable to save.");
+
+            //    });
         }
 
 
-            function HideSubcategory()
-            {
-                debugger;
-                var idCategory = $('#IdCategory').val();
-                if(idCategory== 2)
-                {
-                    $('#IdSubCategory').val(1);
-                    $('#IdSubCategory').attr('disabled', 'disabled');
-                    $('#kg').hide();
-                    $('#kgLabel').hide();
-                }
-                else
-                {
-                    $('#IdSubCategory').val(0);
-                    $('#IdSubCategory').removeAttr('disabled');
-                    $('#kg').show();
-                    $('#kgLabel').show();
-                }
+        function HideSubcategory() {
+           
+            var idCategory = $('#IdCategory').val();
+            if (idCategory == 2) {
+                $('#IdSubCategory').val(1);
+                $('#IdSubCategory').attr('disabled', 'disabled');
+                $('#kg').hide();
+                $('#kgLabel').hide();
             }
-         
-        
+            else {
+                $('#IdSubCategory').val(0);
+                $('#IdSubCategory').removeAttr('disabled');
+                $('#kg').show();
+                $('#kgLabel').show();
+            }
+        }
+
+
     </script>
     </br>
     </br>
-        <div class="container-fluid">
-            
-            <form action="SaveProduct" class="form-horizontal">
-               
+    <div class="container-fluid">
+
+        <form action="SaveProduct" class="form-horizontal">
+
+            <div class="form-group">
+                @Html.ValidationSummary();
+            </div>
+
+            <div class="col-md-6">
                 <div class="form-group">
-                    @Html.ValidationSummary();
+                    <label class="col-md-4" for="pwd">Código de barra:</label>
+                    @Html.TextBoxFor(m => m.CodigoBarra, new { @class = "form-control", type = "text", placeholder = "Ingrese Codigo Barra", onkeyPress = "MyFunction();" })
                 </div>
+                <div class="form-group">
+                    <label class="col-md-4">Código:</label>
+                    @Html.TextBoxFor(m => m.Codigo, new { @class = "form-control", placeholder = "Ingrese el código" })
 
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label class="col-md-4">Código:</label>
-                        @Html.TextBoxFor(m => m.Codigo, new { @class = "form-control", placeholder = "Ingrese el código" })
-
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4" for="desc">Categoria:</label>
-                        @Html.DropDownListFor(model => Model.IdCategory,
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="desc">Categoria:</label>
+                    @Html.DropDownListFor(model => Model.IdCategory,
                         new SelectList(Model.Category, "IdCategory", "Name"), new { @class = "form-control", type = "text", placeholder = "Seleccione Categoria", onchange = "HideSubcategory()" })
 
-                    </div><div class="form-group">
-                        <label class="col-md-4" for="desc">Subcategoria:</label>
-                        @Html.DropDownListFor(model => model.IdSubCategory,
+                </div><div class="form-group">
+                    <label class="col-md-4" for="desc">Subcategoria:</label>
+                    @Html.DropDownListFor(model => model.IdSubCategory,
                         new SelectList(Model.SubCategory, "IdSubCategory", "Name"), new { @class = "form-control", type = "text", placeholder = "Seleccione Categoria" })
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4" for="desc">Marca:</label>
-                        @Html.TextBoxFor(m => m.Marca, new { @class = "form-control", type = "text", placeholder = "Ingrese Marca" })
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4" for="desc">Descripción1:</label>
-                        @Html.TextBoxFor(m => m.Descripcion1, new { @class = "form-control", type = "text", placeholder = "Ingrese Descripción1" })
-                    </div>
-                    <div class="form-group">
-                        <label class="col-md-4" for="desc">Descripción2:</label>
-                        @Html.TextBoxFor(m => m.Descripcion2, new { @class = "form-control", type = "text", placeholder = "Ingrese Descripción2" })
-                    </div>
                 </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="col-md-4" for="cant">Presentación:</label>
-                                @Html.TextBoxFor(m => m.Presentacion, new { @class = "form-control", type = "text", placeholder = "Ingrese Presentación" })
+                <div class="form-group">
+                    <label class="col-md-4" for="desc">Marca:</label>
+                    @Html.TextBoxFor(m => m.Marca, new { @class = "form-control", type = "text", placeholder = "Ingrese Marca" })
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="desc">Descripción1:</label>
+                    @Html.TextBoxFor(m => m.Descripcion1, new { @class = "form-control", type = "text", placeholder = "Ingrese Descripción1" })
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="desc">Descripción2:</label>
+                    @Html.TextBoxFor(m => m.Descripcion2, new { @class = "form-control", type = "text", placeholder = "Ingrese Descripción2" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="col-md-4" for="cant">Presentación:</label>
+                    @Html.TextBoxFor(m => m.Presentacion, new { @class = "form-control", type = "text", placeholder = "Ingrese Presentación" })
 
-                            </div>
-                        
-                       
-                            <div class="form-group">
-                                <label class="col-md-4" id="kgLabel"  for="kg">Kg:</label>
-                                @Html.TextBoxFor(m => m.kg, new { @class = "form-control", type = "text", placeholder = "Ingrese Kg" })
+                </div>
 
-                            
-                        </div>
-                            
-                                <div class="form-group">
-                                    <label class="col-md-4" for="cant">Cantidad:</label>
-                                    @Html.TextBoxFor(m => m.Cantidad, new { @class = "form-control", type = "text", placeholder = "Ingrese Cantidad" })
 
-                                </div>
+                <div class="form-group">
+                    <label class="col-md-4" id="kgLabel" for="kg">Kg:</label>
+                    @Html.TextBoxFor(m => m.kg, new { @class = "form-control", type = "text", placeholder = "Ingrese Kg" })
 
-                                <div class="form-group">
-                                    <label class="col-md-4" for="pwd">Código de barra:</label>
-                                    @Html.TextBoxFor(m => m.CodigoBarra, new { @class = "form-control", type = "text", placeholder = "Ingrese Codigo Barra", onkeyPress = "MyFunction();" })
-                                </div>
 
-                                <div class="form-group">
-                                    <label class="col-md-4" for="pwd">Precio Costo</label>
-                                    @Html.TextBoxFor(m => m.PrecioCosto, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
-                                </div>
-                                <div class="form-group">
-                                    <label class="col-md-4" for="pwd">Precio Venta</label>
-                                    @Html.TextBoxFor(m => m.PrecioVenta, new { type = "number", min = "0", step = "0.01" , @class = "form-control" }) 
-                                </div>
-                            <div class="form-group">
-                                <label class="col-md-4" for="rentabilidad$">Rentabilidad $</label>
-                                @Html.TextBoxFor(m => m.RentabilidadPesos, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
-                            </div>
-                            <div class="form-group">
-                                <label class="col-md-4" for="rentabilidad%">Rentabilidad %</label>
-                                @Html.TextBoxFor(m => m.Rentabilidad, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
-                            </div>
+                </div>
 
-                            </div>
-                            <button type="submit" name="SaveProduct" value="save" class="btn btn-primary">Agregar Producto</button>
-</form>
-        </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="cant">Cantidad:</label>
+                    @Html.TextBoxFor(m => m.Cantidad, new { @class = "form-control", type = "text", placeholder = "Ingrese Cantidad" })
+
+                </div>
+
+                <div class="form-group">
+                    <label class="col-md-4" for="pwd">Precio Costo</label>
+                    @Html.TextBoxFor(m => m.PrecioCosto, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="pwd">Precio Venta</label>
+                    @Html.TextBoxFor(m => m.PrecioVenta, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="rentabilidad$">Rentabilidad $</label>
+                    @Html.TextBoxFor(m => m.RentabilidadPesos, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label class="col-md-4" for="rentabilidad%">Rentabilidad %</label>
+                    @Html.TextBoxFor(m => m.Rentabilidad, new { type = "number", min = "0", step = "0.01", @class = "form-control" })
+                </div>
+
+
+            </div>
+
+        </form>
+
+        </br>
+        <button type="submit" name="SaveProduct" value="save" class="btn btn-primary">Agregar Producto</button>
+        </br>
+
+    </div>
 </body>
-
 </html>
 
