--- a/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
+++ b/ERPAnimalia/Views/Shared/HeadVoucher.cshtml
@@ -14,18 +14,21 @@
     $(document).ready(function () {
         $("#NombreCompleto").autocomplete({
             source: function (request, response) {
-                debugger;
+                
                 $.ajax({
                     url: "/Voucher/GetClient",
                     type: "POST", dataType: "json",
                     data: { term: request.term },
-                    success: function (data) {         
-                        response($.map(data, function (item) {                        
+                    success: function (data) {
+                       
+                        response($.map(data, function (item) { 
+                          
                             return { label: item.NombreCompleto, value: item.NombreCompleto };
                            
                         }));
                     }
                 });
+                SaveEnabled();
             },
             messages: { noResults: "", results: "" }
         });
@@ -70,9 +73,9 @@
     <br class="panel-body">
         <form  class="container-fluid" action="HeadVoucher">
             <div class="form-group">
-                <label class="control-label col-md-3" for="cliente">Cliente:</label>
+                <label class="control-label col-md-2" for="cliente">Cliente:</label>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         @Html.EditorFor(model => model.clientModel.First().NombreCompleto, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                     <div class="col-md-4">
@@ -84,7 +87,7 @@
                 <br />
             </div>
             <div class="form-group">
-                <label class="control-label col-md-3" for="DateVoucher">Fecha</label>
+                <label class="control-label col-md-2" for="DateVoucher">Fecha</label>
                 <input type="text" class="datepicker" data-date-format="mm/dd/yyyy" id="DateVoucher" placeholder="Ingrese Fecha">
             </div>
               
@@ -93,11 +96,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label col-md-3">Tipo Comprobante:</label>
+                    <label class="control-label col-md-2">Tipo Comprobante:</label>
                     @Html.DropDownList("TipoComprobante", new SelectList((System.Collections.IEnumerable)ViewData["listTipoComprobante"], "IdTipoComprobante ", "Descripcion"), new { @class = "form-control" })
                 </div>
                 <div class="form-group">
-                    <label class="control-label col-md-3">forma Pago:</label>
+                    <label class="control-label col-md-2">forma Pago:</label>
                     @Html.DropDownList("formaDePago", new SelectList((System.Collections.IEnumerable)ViewData["listFormaPAgo"], "IdFormaDePago", "Descripcion"), new { @class = "form-control" })
                 </div>
               
